jobs/job_60783810/uncert/errors/benchmark_110/solver_2.txt
INFO: Pointer analysis took 0 sec 0 ms
input.cc:40:15: error: cannot assign to variable 'p' with const-qualified type 'const char'
        c = memory1[p++];
                    ~^
input.cc:33:13: note: variable 'p' declared const here
        const char p = s1, spanp;
        ~~~~~~~~~~~^~~~~~
input.cc:41:13: error: cannot assign to variable 'spanp' with const-qualified type 'const char'
        for (spanp = s2; (sc = memory0[spanp++]) != 0;)
             ~~~~~ ^
input.cc:33:21: note: variable 'spanp' declared const here
        const char p = s1, spanp;
        ~~~~~~~~~~~~~~~~~~~^~~~~
input.cc:41:38: error: cannot assign to variable 'spanp' with const-qualified type 'const char'
        for (spanp = s2; (sc = memory0[spanp++]) != 0;)
                                       ~~~~~^
input.cc:33:21: note: variable 'spanp' declared const here
        const char p = s1, spanp;
        ~~~~~~~~~~~~~~~~~~~^~~~~
3 errors generated.
gp1XZ_Ptr2Arr.c:40:15: error: read-only variable is not assignable
        c = memory1[p++];
                    ~^
gp1XZ_Ptr2Arr.c:41:13: error: read-only variable is not assignable
        for (spanp = s2; (sc = memory0[spanp++]) != 0;)
             ~~~~~ ^
gp1XZ_Ptr2Arr.c:41:38: error: read-only variable is not assignable
        for (spanp = s2; (sc = memory0[spanp++]) != 0;)
                                       ~~~~~^
3 errors generated.
